# IOT_Gateway

./: .gitignore  Cargo.toml  ESTRUCTURA  README.md  config.ini
.github/workflows/: automatic_release.yaml
modbus_tcp/Analizador_1/: connection.ini  events.ini  publishers.ini
modbus_tcp/Analizador_2/: events.ini  publishers.ini
src/: ini_parser.rs  main.rs  modbus_rtu.rs  modbus_tcp.rs  running_modes.rs
src/cloud_protocols/: mod.rs  mqtt.rs
src/config_files/: ini_parser.rs  mod.rs  read_files.rs
src/device_protocols/: mod.rs  modbus_rtu.rs  modbus_tcp.rs
src/device_protocols/modbus/: mod.rs  rtu_over_tcp.rs  shared.rs  tcp.rs
src/modbus_tcp/: ini_parser.rs  mod.rs  modbus.rs
src/models/: device.rs  mod.rs  tag.rs
